
			     BZFlag release notes

* add new updates here without heading until a release
* [UN]SILENCE - Dave Brosius, Tim Riker
* revert lag falling patch - Tim Riker, Dave Brosius
* teamgrab.wav - Dave Brosius
* improved texture mapping - unknown
* possible win32 installer bug - Chris Walters
* gcc 3.1+ patches - David Trowbridge

BZFlag 1.7e6 or Armoured Smashing Fist 2002 (was 1.7e5)
-------------------------------------------------------

* new HUD! - David Trowbridge, Tim Riker, many others
* added temporary bans (minutes) - Dave Brosius
* Can now build entire win32 installer from VC Workspace - Dave Brosius
* non-listserver connection gave 0.0.0.0 as host: fixed - Dave Brosius
* added private messages - Frank Thilo
* modified / added roaming support for observers - Frank Thilo
* added /idlekick server option - Frank Thilo
* fix /ban and add /unban - Frank Thilo
* allow both -mp # and -mp #,#,#,#,# - Frank Thilo
* CTF flag returning to base fixes - Frank Thilo
* sort teams by score, sort in self - janne hassinen, Tim Riker
* observer hack, should be a team - Frank Thilo
* /countdown, /lagwarn - Frank Thilo
* PatchId fixes - Frank Thilo, Tim Riker
* New lag measurement using pings - Frank Thilo
* Reassign keyboard menu is now in two columns - Dave Brosius
* Fix MsgMessage and CLIENTQUERY handling - Frank Thilo
* -ban - David Trowbridge, Dave Brosius, Tim Riker
* Mac OSX work - Kevin Avila <kevin@hzsystems.com>
* -cr random ctf maps - Tim Riker, Frank Thilo
* bots in building fix - Tim Riker, Harry Dodgson
* Pause and not responding on HUD - Frank Thilo
* Message History buffer - Dave Brosius (cleaned by Tim Riker)
* Nemesis set on direct receive - Frank Thilo
* LT and RT command line aliases for shell impaired - Tim Riker
* radar shade flags by altitude - Tim Riker (reworked from Jeremiah)
* different kill msgs - Sal Gonzalez, Tim Riker
* brighter radar colors - Tim Riker with much input from others
* team colored shock wave - Tim Riker